реализация основной части сервиса